# acroforge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  conftest.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  license-gate.yml  publish.yml
examples/: demo.py
harness/: diff.py  package-lock.json  package.json  render_pdfium.py  render_pdfjs.mjs  render_pdfjs.py
spikes/: RESULTS.md  gate_a_pikepdf.py  gate_a_pypdfform.py  gate_a_reportlab_pypdf.py  gate_c_scanned_stamp.py
src/acroforge/: __init__.py  api.py  cli.py  models.py  read.py
src/acroforge/detect/: geometry.py  grouping.py  manifest.py  naming.py  scanned.py
src/acroforge/engine/: base.py
src/acroforge/engine/backends/: reportlab_pypdf.py
tests/: test_api.py  test_cli.py  test_cross_viewer_choice.py  test_cross_viewer_field.py  test_detect_api.py  test_detect_geometry.py  test_detect_grouping.py  test_detect_manifest.py  test_detect_naming.py  test_detect_resilience.py  test_detect_robustness.py  test_detect_smoke.py  test_detect_tables.py  test_engine_choice.py  test_engine_comb_signature.py  test_engine_hardening.py  test_engine_radio.py  test_engine_text_checkbox.py  test_fill_flatten.py  test_harness.py  test_models.py  test_read_fields.py  test_remove.py  test_robustness.py  test_scanned.py
tests/fixtures/: README.md
