[project]
name = "acroforge"
version = "0.3.1"
description = "Turn flat PDFs into real, fillable AcroForms - permissive, deterministic, zero-copyleft."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sanjay Chauhan", email = "san64777@gmail.com" }]
keywords = ["pdf", "acroform", "forms", "fillable", "pdf-forms", "fill-pdf", "pdf-generation"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business",
  "Topic :: Text Processing :: General",
  "Topic :: Multimedia :: Graphics",
  "Typing :: Typed",
]
dependencies = [
  # zero-copyleft runtime tree - all BSD/MIT. (engine = reportlab + pypdf)
  "pdfplumber>=0.11.9",
  "pypdf>=6.13.0,<7",
  "reportlab>=4.5.1",
  "pydantic>=2",
]

[project.optional-dependencies]
fallback = ["pikepdf>=10.7.3"]
harness = ["pypdfium2>=5.9.0", "Pillow>=11"]
dev = ["pytest>=8", "ruff>=0.6", "mypy>=1.11", "pip-licenses>=5"]

[project.urls]
Homepage = "https://github.com/san64777/acroforge"
Repository = "https://github.com/san64777/acroforge"
Issues = "https://github.com/san64777/acroforge/issues"

[project.scripts]
acroforge = "acroforge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acroforge"]

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
